<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:contentInsetLeft="0dp"
        android:contentInsetStart="16dp"

    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/toolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:id="@+id/add_reminder_layout_top"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:layout_height="148dp">

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/reminder_title"
            android:layout_marginStart="72dp"
            android:hint="@string/add_reminder"
            android:textSize="25sp"
            android:lines="4"
            android:autofillHints="@string/add_reminder"
            android:minLines="4"
            android:gravity="top|start"
            android:textColor="@android:color/white"
            android:scrollHorizontally="false"
            android:inputType="textCapWords|textMultiLine"
            android:layout_marginEnd="16dp"
            android:layout_height="140dp"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/add_reminder_layout_top"
        android:background="@color/background1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/details"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_marginStart="72dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:text="@string/details"
                android:textColor="@color/text_font"
                android:textSize="15sp" />

            <RelativeLayout
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:onClick="setDate">

                <ImageView
                    android:id="@+id/date_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="32dp"
                    android:src="@drawable/ic_view_day_grey600_24dp"
                    android:contentDescription="@string/date_description"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/date_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/date_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textColor="@color/text_font"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/set_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_font"
                        android:textSize="15sp" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:onClick="setTime">

                <ImageView
                    android:id="@+id/time_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="32dp"
                    android:src="@drawable/ic_access_time_grey600_24dp"
                    android:contentDescription="@string/time_description"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/time_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/time_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textColor="@color/text_font"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/set_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_font"
                        android:textSize="15sp" />

                </LinearLayout>



            </RelativeLayout>
            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:id="@+id/repeat"
                android:layout_width="match_parent"
                android:layout_height="72dp">

                <ImageView
                    android:id="@+id/repeat_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="32dp"
                    android:src="@drawable/ic_sync_grey600_24dp"
                    android:contentDescription="@string/Repeat_description"/>

                <LinearLayout
                    android:id="@+id/repeat_ll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/repeat_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/repeat_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat"
                        android:textColor="@color/text_font"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/set_repeat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_font"
                        android:textSize="15sp" />

                </LinearLayout>

                <Switch
                    android:id="@+id/repeat_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:checked="true"
                    android:onClick="onSwitchRepeat"
                    android:textOff="@string/text_off"
                    android:textOn="@string/text_on" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/RepeatNo"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:onClick="setRepeatNo">

                <ImageView
                    android:id="@+id/repeat_no_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="32dp"
                    android:src="@drawable/ic_unfold_more_grey600_24dp"
                    android:contentDescription="@string/interval_description"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/repeat_no_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/repeat_no_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat_no"
                        android:textColor="@color/text_font"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/set_repeat_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_font"
                        android:textSize="15sp" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/RepeatType"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:onClick="selectRepeatType">

                <ImageView
                    android:id="@+id/repeat_type_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="32dp"
                    android:src="@drawable/ic_subject_grey600_24dp"
                    android:contentDescription="@string/type_description"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/repeat_type_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/repeat_type_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat_type"
                        android:textColor="@color/text_font"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/set_repeat_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_font"
                        android:textSize="15sp" />

                </LinearLayout>

            </RelativeLayout>


        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/add_reminder_layout_top"
        android:background="@drawable/ic_action_name" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/starred1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="selectFab1"
        fab:fab_icon="@drawable/ic_notifications_off_grey600_24dp"
        fab:fab_colorNormal="@color/colorAccent"
        fab:fab_colorPressed="@color/fab_pressed"
        fab:fab_size="normal"
        android:src="@drawable/ic_notifications_off_grey600_24dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="168dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/starred2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:onClick="selectFab2"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="168dp"
        android:clickable="true"
        app:fabSize="normal"
        fab:fab_colorNormal="@color/colorAccent"
        fab:fab_colorPressed="@color/fab_pressed"
        fab:fab_icon="@drawable/ic_notifications_on_white_24dp"
        android:src="@drawable/ic_notifications_on_white_24dp"
        fab:fab_size="normal" />


</RelativeLayout>