<resources>
    <string name="app_name">MedTracker</string>
    <string name="no_card_details">Click on the button below to begin creating reminders!</string>
    <string name="title_activity_add_reminder">Add Medicine</string>
    <string name="title_activity_edit_reminder">Edit Medicine</string>
    <string name="title_activity_licenses">Licenses</string>

    <string name="add_reminder">Enter Reminder here</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>
    <string name="about">About</string>
    <string name="about_msg">Version 1.0 Vishnu Sukumaran</string>
    <string name="action_discard_reminder">Discard Medicine</string>
    <string name="action_save_reminder">Save Medicine</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="editor_activity_title_new_reminder">Add Medicine Details</string>
    <string name="editor_activity_title_edit_reminder">Edit Medicine</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this Medicine?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>
    <string name="editor_delete_reminder_successful">Medicine deleted</string>

    <string name="editor_delete_reminder_failed">Error with deleting medicine</string>

    <string name="editor_insert_reminder_successful">Medicine saved</string>

    <string name="editor_insert_reminder_failed">Error with saving Medicine</string>

    <string name="editor_update_reminder_successful">Medicine updated</string>

    <string name="editor_update_reminder_failed">Error with updating medicine</string>

    <string name="reminder_title">MedicineReminder</string>
    <string name="section_format">Page %1$d</string>
    <string name="title_activity_med_pager">MedPagerActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="text_on">On</string>
    <string name="text_off">Off</string>

    <string name="date_description">Press to set the Date</string>
    <string name="time_description">Press to set the time</string>
    <string name="Repeat_description">Choose to set the repetition</string>
    <string name="interval_description">Press to set the interval</string>
    <string name="type_description">Press to set the type</string>

    <string name="text_1">Every </string>
    <string name="text_2">(s)</string>
    <string name="text_space"> </string>
    <string name="time_string">Every %1$s %2$s (s)</string>
    <string name="Notification_msg">Check MedTracker for Medicine!!!</string>
    <string name="checkmed">Check MedTracker for Medicine!!!</string>

</resources>