<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/discard_reminder"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/action_discard_reminder"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/save_reminder"
        android:icon="@drawable/ic_check_white_24dp"
        android:title="@string/action_save_reminder"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/about"
        android:orderInCategory="104"
        android:title="@string/about"
        app:showAsAction="never"
        />
</menu>