...
        android:layout_marginBottom="4dp"
        android:layout_toEndOf="@id/thumbnail_image"
        android:layout_toStartOf="@+id/active_image"
        android:orientation="vertical">

        <TextView
            android:id="@+id/recycle_title"
            android:layout_width="match_parent"
            android:ellipsize="end"
            android:maxLines="2"
            android:layout_height="wrap_content"
            android:textColor="@color/abc_primary_text_material_dark"
            tools:text="Title"
...
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/abc_secondary_text_material_dark"
            tools:text="Date and Time"/>

        <TextView
            android:id="@+id/recycle_repeat_info"
            android:layout_width="match_parent"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/abc_secondary_text_material_dark"
...
